# skills

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Justfile  README.md  dns-troubleshooter.skill  index.html  install-gh-cli.sh  install.sh  manifest.json
.claude-plugin/: marketplace.json  (+1 more)
evals/: check_skill_usage.py  design_memo_eval.py  dns_server.py  dns_skill_eval.py  html_scorers.py  pyproject.toml  scorers.py  test_copilot_skill_loading.py  test_html_scorers.py  test_zones.py
evals/logs/: 2026-01-14T17-48-39+00-00_dns-troubleshooter-eval_PGf2f7W2a5NtLs4tkJnn2B.eval  2026-01-14T17-48-40+00-00_dns-spf-eval_U6DkUqvtCc7ZmywZCFnqqt.eval  2026-01-14T17-48-41+00-00_dns-conflict-eval_MpTFh55K3EmQ9H8zbPYxyW.eval  2026-01-14T17-49-35+00-00_dns-troubleshooter-eval_3EzWuDB7r4xRh6f5EK7HJo.eval  2026-01-14T17-49-36+00-00_dns-spf-eval_HKXK5wTdk5VHP2Wa4SkDwM.eval  2026-01-14T17-49-37+00-00_dns-conflict-eval_CHFebkMGPcrbzMCbssAn4Q.eval  2026-01-14T17-49-58+00-00_dns-troubleshooter-eval_dbLEYvYDsHmZNQFFoQgsQN.eval  2026-01-14T17-50-24+00-00_dns-spf-eval_USUhXqDejz2n5diYvp8XQs.eval  2026-01-14T17-50-45+00-00_dns-conflict-eval_DeFZzeX3H6PM4v4BohEpqy.eval  2026-01-14T17-52-22+00-00_dns-troubleshooter-eval_2vToTUuehzHr58fWqgirYi.eval  2026-01-14T17-52-23+00-00_dns-spf-eval_95rTTfGzU3PXRjCSTYERqh.eval  2026-01-14T17-52-24+00-00_dns-conflict-eval_ABvxRzudrzZgMKuXmqns3u.eval  2026-01-14T17-52-40+00-00_dns-troubleshooter-eval_gpeckSihFQgcNnoYUmhzch.eval  2026-01-14T17-52-42+00-00_dns-conflict-eval_8msGjj7gL8afNnGU7Ezedn.eval  2026-01-14T17-52-42+00-00_dns-spf-eval_6AVsJX6s9MbxTWmhrbMVwa.eval  (+3 more)
(+139 files in other folders)
