[project]
name = "dns-troubleshooter-evals"
version = "0.1.0"
description = "InspectAI evals for dns-troubleshooter skill"
requires-python = ">=3.11"
dependencies = [
    "inspect-ai>=0.3",
    "dnslib>=0.9",
    "dnspython>=2.4",
    "anthropic>=0.39",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
